--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -17,6 +17,11 @@
 ///	@include	flex(2);
 ///	}
 
+@mixin flex($flexunit) {
+	display: 	flex;
+	flex:		$flexunit;
+}
+
 @for $flex-unit from 1 through 10 {
 	.flex#{$flex-unit} {
 		display: flex; flex: $flex-unit; 
@@ -26,24 +31,24 @@
 //////////////////////////////////////////////////
 
 .column {
-	@extend			.flex1;	///	flex1
-	flex-direction:	column;	///	child boxes stack vertically in a column
+	@include		flex(1);	///	flex1
+	flex-direction:	column;		///	child boxes stack vertically in a column
 }
 
-	.column4 {
-		@extend			.flex4;	/// flex4
-		flex-direction:	column;	/// vertical stack of scene then choices
-	}
+.column4 {
+	@include		flex(4);	/// flex4
+	flex-direction:	column;		/// vertical stack of scene then choices
+}
 
 .shell {
-	@extend				.flex1;		///	flex1
+	@include			flex(1);		///	flex1
 	background-color:	$brown15;	/// dark brown (15 brightness)
 	height:				100%;		/// makes for no scrolling
 	padding:			1rem;		/// 14px
 }
 
 .blue-frame {
-	@extend				.flex1;		/// flex1
+	@include			flex(1);		/// flex1
 	background-color:	$blue50;	/// background blue
 	border-radius:		1rem;		/// rounded corners
 	box-shadow:			0 .5rem 0 0 $blue10;	/// vertical, no blur, dark blue
@@ -56,7 +61,7 @@
 ///////////////
 
 @mixin scene {
-	@extend				.flex2;						/// 2/3 of the vertical
+	@include			flex(2);						/// 2/3 of the vertical
 	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
 	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
 	margin-bottom:		1rem;						/// bottom margin set to keep from touching choices
@@ -73,7 +78,7 @@
 }
 
 .scene__adventure--astronaut-ryan-bg {
-	@extend					.flex1;
+	@include				flex(1);
 	background-image: 		url(#{$svg-path}space-adventure__astronaut-ryan.svg);
 	background-position:	bottom;
 	background-repeat:		no-repeat;
@@ -81,21 +86,21 @@
 }
 
 .scene__adventure--planet-bg {
-	@extend					.flex1;
+	@include				flex(1);
 	background-image:		url(#{$svg-path}space-adventure__planet.svg);
 	background-position:	center;
 	background-repeat:		no-repeat;
 }
 
 .scene__adventure--comet-bg {
-	@extend					.flex1;
+	@include				flex(1);
 	background-image:		url(#{$svg-path}space-adventure__comet.svg);
 	background-position:	center;
 	background-repeat:		no-repeat;
 }
 
 .scene__adventure--chat-cloud {
-	@extend				.flex3;					///	3/4 of the area is chat
+	@include			flex(3);					///	3/4 of the area is chat
 	align-items:		center;					///	vertically align text
 	justify-content:	center;					/// centers text on the x axis
 	background-color:	$blue60;				/// space is dark. the chat clouds are too
@@ -105,7 +110,7 @@
 }
 
 .scene__adventure--chat-arrow {
-	@extend					.flex1;
+	@include				flex(1);
 	background-image: 		url(#{$svg-path}space-adventure__chat-arrow.svg);
 	background-position:	center;
 	background-repeat:		no-repeat;
@@ -117,7 +122,7 @@
 	
 
 .choices {
-	@extend				.flex1;						/// container fills all space
+	@include			flex(1);						/// container fills all space
 	background-color:	$blue30;
 	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
 	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
@@ -126,7 +131,7 @@
 }
 
 .choices__button {
-	@extend				.flex1; /// button fills the box
+	@include			flex(1); /// button fills the box
 	align-items:		center;	/// centers text on the y axis
 	background-color:	$blue40;
 	margin:				.3rem;
