--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5819,19 +5819,19 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.flex1, .column, .shell, .blue-frame, .scene__adventure--astronaut-ryan-bg, .scene__adventure--planet-bg, .scene__adventure--comet-bg, .scene__adventure--chat-arrow, .choices, .choices__button, .bioware-style-conversation-wheel {
+.flex1, .bioware-style-conversation-wheel {
   display: flex;
   flex: 1; }
 
-.flex2, .scene__adventure {
+.flex2 {
   display: flex;
   flex: 2; }
 
-.flex3, .scene__adventure--chat-cloud {
+.flex3 {
   display: flex;
   flex: 3; }
 
-.flex4, .column4 {
+.flex4 {
   display: flex;
   flex: 4; }
 
@@ -5860,17 +5860,25 @@ a:link {
   flex: 10; }
 
 .column {
+  display: flex;
+  flex: 1;
   flex-direction: column; }
 
 .column4 {
+  display: flex;
+  flex: 4;
   flex-direction: column; }
 
 .shell {
+  display: flex;
+  flex: 1;
   background-color: #2a2922;
   height: 100%;
   padding: 1rem; }
 
 .blue-frame {
+  display: flex;
+  flex: 1;
   background-color: #667b99;
   border-radius: 1rem;
   box-shadow: 0 0.5rem 0 0 #14191f;
@@ -5878,6 +5886,8 @@ a:link {
   padding: 1rem; }
 
 .scene__adventure {
+  display: flex;
+  flex: 2;
   border-radius: .5rem;
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem;
@@ -5885,22 +5895,30 @@ a:link {
   background-image: url(../../img/svg/space-adventure__stars.svg); }
 
 .scene__adventure--astronaut-ryan-bg {
+  display: flex;
+  flex: 1;
   background-image: url(../../img/svg/space-adventure__astronaut-ryan.svg);
   background-position: bottom;
   background-repeat: no-repeat;
   margin-top: 2vmin; }
 
 .scene__adventure--planet-bg {
+  display: flex;
+  flex: 1;
   background-image: url(../../img/svg/space-adventure__planet.svg);
   background-position: center;
   background-repeat: no-repeat; }
 
 .scene__adventure--comet-bg {
+  display: flex;
+  flex: 1;
   background-image: url(../../img/svg/space-adventure__comet.svg);
   background-position: center;
   background-repeat: no-repeat; }
 
 .scene__adventure--chat-cloud {
+  display: flex;
+  flex: 3;
   align-items: center;
   justify-content: center;
   background-color: #8596ad;
@@ -5909,17 +5927,23 @@ a:link {
   margin: 3vmin 0 3vmin 3vmin; }
 
 .scene__adventure--chat-arrow {
+  display: flex;
+  flex: 1;
   background-image: url(../../img/svg/space-adventure__chat-arrow.svg);
   background-position: center;
   background-repeat: no-repeat; }
 
 .choices {
+  display: flex;
+  flex: 1;
   background-color: #3d4a5c;
   border-radius: .5rem;
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   padding: 1rem; }
 
 .choices__button {
+  display: flex;
+  flex: 1;
   align-items: center;
   background-color: #52637a;
   margin: .3rem;
