html font import changed to css

--- a/style/scss/partials/_type.scss
+++ b/style/scss/partials/_type.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:300|Unica+One);
+
 .h1__12 {
 	@include		h1;		///	unica one, uppercase, centered, no margin or padding
 	font-size:		12vmin;	/// relative font size
