greyscale enabled for testing

--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -9,6 +9,7 @@ $svg-path : "../../img/svg/";	///	path to svg images
 ///////////////
 @import 'partials/mixins';
 @import 'partials/colors';
+@import 'partials/greyscale';
 @import 'partials/color-generator';
 @import 'partials/base';
 @import 'partials/type';
