--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -1,4 +1,610 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300|Unica+One);
+.bg--0 {
+  background-color: black; }
+
+.bg--1 {
+  background-color: #030303; }
+
+.bg--2 {
+  background-color: #050505; }
+
+.bg--3 {
+  background-color: #080808; }
+
+.bg--4 {
+  background-color: #0a0a0a; }
+
+.bg--5 {
+  background-color: #0d0d0d; }
+
+.bg--6 {
+  background-color: #0f0f0f; }
+
+.bg--7 {
+  background-color: #121212; }
+
+.bg--8 {
+  background-color: #141414; }
+
+.bg--9 {
+  background-color: #171717; }
+
+.bg--10 {
+  background-color: #1a1a1a; }
+
+.bg--11 {
+  background-color: #1c1c1c; }
+
+.bg--12 {
+  background-color: #1f1f1f; }
+
+.bg--13 {
+  background-color: #212121; }
+
+.bg--14 {
+  background-color: #242424; }
+
+.bg--15 {
+  background-color: #262626; }
+
+.bg--16 {
+  background-color: #292929; }
+
+.bg--17 {
+  background-color: #2b2b2b; }
+
+.bg--18 {
+  background-color: #2e2e2e; }
+
+.bg--19 {
+  background-color: #303030; }
+
+.bg--20 {
+  background-color: #333333; }
+
+.bg--21 {
+  background-color: #363636; }
+
+.bg--22 {
+  background-color: #383838; }
+
+.bg--23 {
+  background-color: #3b3b3b; }
+
+.bg--24 {
+  background-color: #3d3d3d; }
+
+.bg--25 {
+  background-color: #404040; }
+
+.bg--26 {
+  background-color: #424242; }
+
+.bg--27 {
+  background-color: #454545; }
+
+.bg--28 {
+  background-color: #474747; }
+
+.bg--29 {
+  background-color: #4a4a4a; }
+
+.bg--30 {
+  background-color: #4d4d4d; }
+
+.bg--31 {
+  background-color: #4f4f4f; }
+
+.bg--32 {
+  background-color: #525252; }
+
+.bg--33 {
+  background-color: #545454; }
+
+.bg--34 {
+  background-color: #575757; }
+
+.bg--35 {
+  background-color: #595959; }
+
+.bg--36 {
+  background-color: #5c5c5c; }
+
+.bg--37 {
+  background-color: #5e5e5e; }
+
+.bg--38 {
+  background-color: #616161; }
+
+.bg--39 {
+  background-color: #636363; }
+
+.bg--40 {
+  background-color: #666666; }
+
+.bg--41 {
+  background-color: dimgray; }
+
+.bg--42 {
+  background-color: #6b6b6b; }
+
+.bg--43 {
+  background-color: #6e6e6e; }
+
+.bg--44 {
+  background-color: #707070; }
+
+.bg--45 {
+  background-color: #737373; }
+
+.bg--46 {
+  background-color: #757575; }
+
+.bg--47 {
+  background-color: #787878; }
+
+.bg--48 {
+  background-color: #7a7a7a; }
+
+.bg--49 {
+  background-color: #7d7d7d; }
+
+.bg--50 {
+  background-color: gray; }
+
+.bg--51 {
+  background-color: #828282; }
+
+.bg--52 {
+  background-color: #858585; }
+
+.bg--53 {
+  background-color: #878787; }
+
+.bg--54 {
+  background-color: #8a8a8a; }
+
+.bg--55 {
+  background-color: #8c8c8c; }
+
+.bg--56 {
+  background-color: #8f8f8f; }
+
+.bg--57 {
+  background-color: #919191; }
+
+.bg--58 {
+  background-color: #949494; }
+
+.bg--59 {
+  background-color: #969696; }
+
+.bg--60 {
+  background-color: #999999; }
+
+.bg--61 {
+  background-color: #9c9c9c; }
+
+.bg--62 {
+  background-color: #9e9e9e; }
+
+.bg--63 {
+  background-color: #a1a1a1; }
+
+.bg--64 {
+  background-color: #a3a3a3; }
+
+.bg--65 {
+  background-color: #a6a6a6; }
+
+.bg--66 {
+  background-color: #a8a8a8; }
+
+.bg--67 {
+  background-color: #ababab; }
+
+.bg--68 {
+  background-color: #adadad; }
+
+.bg--69 {
+  background-color: #b0b0b0; }
+
+.bg--70 {
+  background-color: #b3b3b3; }
+
+.bg--71 {
+  background-color: #b5b5b5; }
+
+.bg--72 {
+  background-color: #b8b8b8; }
+
+.bg--73 {
+  background-color: #bababa; }
+
+.bg--74 {
+  background-color: #bdbdbd; }
+
+.bg--75 {
+  background-color: #bfbfbf; }
+
+.bg--76 {
+  background-color: #c2c2c2; }
+
+.bg--77 {
+  background-color: #c4c4c4; }
+
+.bg--78 {
+  background-color: #c7c7c7; }
+
+.bg--79 {
+  background-color: #c9c9c9; }
+
+.bg--80 {
+  background-color: #cccccc; }
+
+.bg--81 {
+  background-color: #cfcfcf; }
+
+.bg--82 {
+  background-color: #d1d1d1; }
+
+.bg--83 {
+  background-color: #d4d4d4; }
+
+.bg--84 {
+  background-color: #d6d6d6; }
+
+.bg--85 {
+  background-color: #d9d9d9; }
+
+.bg--86 {
+  background-color: #dbdbdb; }
+
+.bg--87 {
+  background-color: #dedede; }
+
+.bg--88 {
+  background-color: #e0e0e0; }
+
+.bg--89 {
+  background-color: #e3e3e3; }
+
+.bg--90 {
+  background-color: #e6e6e6; }
+
+.bg--91 {
+  background-color: #e8e8e8; }
+
+.bg--92 {
+  background-color: #ebebeb; }
+
+.bg--93 {
+  background-color: #ededed; }
+
+.bg--94 {
+  background-color: #f0f0f0; }
+
+.bg--95 {
+  background-color: #f2f2f2; }
+
+.bg--96 {
+  background-color: whitesmoke; }
+
+.bg--97 {
+  background-color: #f7f7f7; }
+
+.bg--98 {
+  background-color: #fafafa; }
+
+.bg--99 {
+  background-color: #fcfcfc; }
+
+.bg--100 {
+  background-color: white; }
+
+.color--0 {
+  background-color: black; }
+
+.color--1 {
+  background-color: #030303; }
+
+.color--2 {
+  background-color: #050505; }
+
+.color--3 {
+  background-color: #080808; }
+
+.color--4 {
+  background-color: #0a0a0a; }
+
+.color--5 {
+  background-color: #0d0d0d; }
+
+.color--6 {
+  background-color: #0f0f0f; }
+
+.color--7 {
+  background-color: #121212; }
+
+.color--8 {
+  background-color: #141414; }
+
+.color--9 {
+  background-color: #171717; }
+
+.color--10 {
+  background-color: #1a1a1a; }
+
+.color--11 {
+  background-color: #1c1c1c; }
+
+.color--12 {
+  background-color: #1f1f1f; }
+
+.color--13 {
+  background-color: #212121; }
+
+.color--14 {
+  background-color: #242424; }
+
+.color--15 {
+  background-color: #262626; }
+
+.color--16 {
+  background-color: #292929; }
+
+.color--17 {
+  background-color: #2b2b2b; }
+
+.color--18 {
+  background-color: #2e2e2e; }
+
+.color--19 {
+  background-color: #303030; }
+
+.color--20 {
+  background-color: #333333; }
+
+.color--21 {
+  background-color: #363636; }
+
+.color--22 {
+  background-color: #383838; }
+
+.color--23 {
+  background-color: #3b3b3b; }
+
+.color--24 {
+  background-color: #3d3d3d; }
+
+.color--25 {
+  background-color: #404040; }
+
+.color--26 {
+  background-color: #424242; }
+
+.color--27 {
+  background-color: #454545; }
+
+.color--28 {
+  background-color: #474747; }
+
+.color--29 {
+  background-color: #4a4a4a; }
+
+.color--30 {
+  background-color: #4d4d4d; }
+
+.color--31 {
+  background-color: #4f4f4f; }
+
+.color--32 {
+  background-color: #525252; }
+
+.color--33 {
+  background-color: #545454; }
+
+.color--34 {
+  background-color: #575757; }
+
+.color--35 {
+  background-color: #595959; }
+
+.color--36 {
+  background-color: #5c5c5c; }
+
+.color--37 {
+  background-color: #5e5e5e; }
+
+.color--38 {
+  background-color: #616161; }
+
+.color--39 {
+  background-color: #636363; }
+
+.color--40 {
+  background-color: #666666; }
+
+.color--41 {
+  background-color: dimgray; }
+
+.color--42 {
+  background-color: #6b6b6b; }
+
+.color--43 {
+  background-color: #6e6e6e; }
+
+.color--44 {
+  background-color: #707070; }
+
+.color--45 {
+  background-color: #737373; }
+
+.color--46 {
+  background-color: #757575; }
+
+.color--47 {
+  background-color: #787878; }
+
+.color--48 {
+  background-color: #7a7a7a; }
+
+.color--49 {
+  background-color: #7d7d7d; }
+
+.color--50 {
+  background-color: gray; }
+
+.color--51 {
+  background-color: #828282; }
+
+.color--52 {
+  background-color: #858585; }
+
+.color--53 {
+  background-color: #878787; }
+
+.color--54 {
+  background-color: #8a8a8a; }
+
+.color--55 {
+  background-color: #8c8c8c; }
+
+.color--56 {
+  background-color: #8f8f8f; }
+
+.color--57 {
+  background-color: #919191; }
+
+.color--58 {
+  background-color: #949494; }
+
+.color--59 {
+  background-color: #969696; }
+
+.color--60 {
+  background-color: #999999; }
+
+.color--61 {
+  background-color: #9c9c9c; }
+
+.color--62 {
+  background-color: #9e9e9e; }
+
+.color--63 {
+  background-color: #a1a1a1; }
+
+.color--64 {
+  background-color: #a3a3a3; }
+
+.color--65 {
+  background-color: #a6a6a6; }
+
+.color--66 {
+  background-color: #a8a8a8; }
+
+.color--67 {
+  background-color: #ababab; }
+
+.color--68 {
+  background-color: #adadad; }
+
+.color--69 {
+  background-color: #b0b0b0; }
+
+.color--70 {
+  background-color: #b3b3b3; }
+
+.color--71 {
+  background-color: #b5b5b5; }
+
+.color--72 {
+  background-color: #b8b8b8; }
+
+.color--73 {
+  background-color: #bababa; }
+
+.color--74 {
+  background-color: #bdbdbd; }
+
+.color--75 {
+  background-color: #bfbfbf; }
+
+.color--76 {
+  background-color: #c2c2c2; }
+
+.color--77 {
+  background-color: #c4c4c4; }
+
+.color--78 {
+  background-color: #c7c7c7; }
+
+.color--79 {
+  background-color: #c9c9c9; }
+
+.color--80 {
+  background-color: #cccccc; }
+
+.color--81 {
+  background-color: #cfcfcf; }
+
+.color--82 {
+  background-color: #d1d1d1; }
+
+.color--83 {
+  background-color: #d4d4d4; }
+
+.color--84 {
+  background-color: #d6d6d6; }
+
+.color--85 {
+  background-color: #d9d9d9; }
+
+.color--86 {
+  background-color: #dbdbdb; }
+
+.color--87 {
+  background-color: #dedede; }
+
+.color--88 {
+  background-color: #e0e0e0; }
+
+.color--89 {
+  background-color: #e3e3e3; }
+
+.color--90 {
+  background-color: #e6e6e6; }
+
+.color--91 {
+  background-color: #e8e8e8; }
+
+.color--92 {
+  background-color: #ebebeb; }
+
+.color--93 {
+  background-color: #ededed; }
+
+.color--94 {
+  background-color: #f0f0f0; }
+
+.color--95 {
+  background-color: #f2f2f2; }
+
+.color--96 {
+  background-color: whitesmoke; }
+
+.color--97 {
+  background-color: #f7f7f7; }
+
+.color--98 {
+  background-color: #fafafa; }
+
+.color--99 {
+  background-color: #fcfcfc; }
+
+.color--100 {
+  background-color: white; }
+
 .blue__bg--0 {
   background-color: black; }
 
