h1 font change from unica to passion

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300|Unica+One);
+@import url(http://fonts.googleapis.com/css?family=Lato:300|Passion+One);
 .bg--0 {
   background-color: black; }
 
@@ -6377,40 +6377,35 @@ a:link {
   text-decoration: none; }
 
 .h1__12 {
-  font-family: 'Unica One', cursive;
-  text-transform: uppercase;
+  font-family: 'Passion One', cursive;
   text-align: center;
   margin: 0;
   padding: 0;
   font-size: 12vmin; }
 
 .h1__10 {
-  font-family: 'Unica One', cursive;
-  text-transform: uppercase;
+  font-family: 'Passion One', cursive;
   text-align: center;
   margin: 0;
   padding: 0;
   font-size: 10vmin; }
 
 .h1__8 {
-  font-family: 'Unica One', cursive;
-  text-transform: uppercase;
+  font-family: 'Passion One', cursive;
   text-align: center;
   margin: 0;
   padding: 0;
   font-size: 8vmin; }
 
 .h1__6 {
-  font-family: 'Unica One', cursive;
-  text-transform: uppercase;
+  font-family: 'Passion One', cursive;
   text-align: center;
   margin: 0;
   padding: 0;
   font-size: 6vmin; }
 
 .h1__5, .h1__5--blue {
-  font-family: 'Unica One', cursive;
-  text-transform: uppercase;
+  font-family: 'Passion One', cursive;
   text-align: center;
   margin: 0;
   padding: 0;
