--- a/style/scss/partials/_type.scss
+++ b/style/scss/partials/_type.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300|Unica+One);
+@import url(http://fonts.googleapis.com/css?family=Lato:300|Passion+One);
 
 .h1__12 {
 	@include		h1;		///	unica one, uppercase, centered, no margin or padding
