--- a/style/scss/partials/_mixins.scss
+++ b/style/scss/partials/_mixins.scss
@@ -4,8 +4,7 @@
 }
 
 @mixin h1 {
-	font-family:	'Unica One', cursive;	///	cursive fallback if font fails
-	text-transform:	uppercase;				///	uppercase
+	font-family:	'Passion One', cursive;	///	cursive fallback if font fails
 	text-align:		center;					///	horizontally centered
 	margin:			0;						///	no margin
 	padding:		0;						///	no padding
