--- a/style/css/style.css
+++ b/style/css/style.css
@@ -6366,7 +6366,7 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 14px;
+  font-size: 8px;
   height: 100%; }
 
 body {
@@ -6532,7 +6532,7 @@ a:link {
   flex: 1;
   background-color: #2a2922;
   height: 100%;
-  padding: 1rem; }
+  padding: 1.5rem; }
 
 .blue-frame {
   display: -webkit-flex;
@@ -6542,12 +6542,12 @@ a:link {
   -ms-flex: 1;
   flex: 1;
   background-color: #667b99;
-  border-radius: 1rem;
-  box-shadow: 0 0.5rem 0 0 #14191f;
+  border-radius: 1.5rem;
+  box-shadow: 0 1rem 0 0 #14191f;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  padding: 1rem; }
+  padding: 1.5rem; }
 
 .scene__adventure {
   display: -webkit-flex;
@@ -6556,9 +6556,9 @@ a:link {
   -webkit-flex: 2;
   -ms-flex: 2;
   flex: 2;
-  border-radius: .5rem;
-  box-shadow: inset 0 0.5rem 0 0 #29313d;
-  margin-bottom: 1rem;
+  border-radius: 1rem;
+  box-shadow: inset 0 1rem 0 0 #29313d;
+  margin-bottom: 1.5rem;
   background-color: #29313d;
   background-image: url(../../img/svg/space-adventure__stars.svg); }
 
@@ -6610,7 +6610,7 @@ a:link {
   -ms-flex-pack: center;
   justify-content: center;
   background-color: #8596ad;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   padding: 1vmin;
   margin: 3vmin 0 3vmin 3vmin; }
 
@@ -6633,9 +6633,9 @@ a:link {
   -ms-flex: 1;
   flex: 1;
   background-color: #3d4a5c;
-  border-radius: .5rem;
-  box-shadow: inset 0 0.5rem 0 0 #29313d;
-  padding: 1rem; }
+  border-radius: 1rem;
+  box-shadow: inset 0 1rem 0 0 #29313d;
+  padding: 1.5rem; }
 
 .choices__button {
   display: -webkit-flex;
@@ -6648,9 +6648,9 @@ a:link {
   -ms-flex-align: center;
   align-items: center;
   background-color: #52637a;
-  margin: .3rem;
+  margin: 1rem;
   box-shadow: 0 0.3rem 0 0 #29313d;
-  border-radius: .5rem;
+  border-radius: 1rem;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
