--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -24,16 +24,16 @@
 	@include			flex(1);		///	flex1
 	background-color:	$brown15;	/// dark brown (15 brightness)
 	height:				100%;		/// makes for no scrolling
-	padding:			1rem;		/// 14px
+	padding:			$rem2;		/// 14px
 }
 
 .blue-frame {
 	@include			flex(1);		/// flex1
 	background-color:	$blue50;	/// background blue
-	border-radius:		1rem;		/// rounded corners
-	box-shadow:			0 .5rem 0 0 $blue10;	/// vertical, no blur, dark blue
+	border-radius:		$rem2;		/// rounded corners
+	box-shadow:			0 $rem1 0 0 $blue10;	/// vertical, no blur, dark blue
 	flex-direction:		column;		/// flexbox stacks vertically in a column
-	padding:			1rem;		/// sets the size of the frame
+	padding:			$rem2;		/// sets the size of the frame
 }
 
 ///////////////
@@ -42,9 +42,9 @@
 
 @mixin scene {
 	@include			flex(2);						/// 2/3 of the vertical
-	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
-	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
-	margin-bottom:		1rem;						/// bottom margin set to keep from touching choices
+	border-radius:		$rem1;						/// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 $rem1 0 0 $blue20;	/// dark blue inner (inset) drop shadow
+	margin-bottom:		$rem2;						/// bottom margin set to keep from touching choices
 }
 
 ///////////////////////////////////
@@ -92,7 +92,7 @@
 	align-items:		center;					///	vertically align text
 	justify-content:	center;					/// centers text on the x axis
 	background-color:	$blue60;				/// space is dark. the chat clouds are too
-	border-radius:		1rem;					///	absolute rounded corners
+	border-radius:		$rem2;					///	absolute rounded corners
 	padding:			1vmin;					///	relative to keep text from fighting with edges
 	margin:				3vmin 0 3vmin 3vmin;	/// no right margin
 }
@@ -112,9 +112,9 @@
 .choices {
 	@include			flex(1);						/// container fills all space
 	background-color:	$blue30;
-	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
-	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
-	padding:			1rem;						/// sets the size of the frame
+	border-radius:		$rem1;						/// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 $rem1 0 0 $blue20;	/// dark blue inner (inset) drop shadow
+	padding:			$rem2;						/// sets the size of the frame
 	/// _meda-queries.scss orientation changes this to column
 }
 
@@ -122,9 +122,9 @@
 	@include			flex(1); /// button fills the box
 	align-items:		center;	/// centers text on the y axis
 	background-color:	$blue40;
-	margin:				.3rem;
+	margin:				$rem1;
 	box-shadow:			0 0.3rem 0 0 $blue20;	/// lower than choices to reflect less lighting, also not inset
-	border-radius:		.5rem;
+	border-radius:		$rem1;
 	justify-content:	center;	/// centers text on the x axis
 	color:				$blue70;
 		&:hover	{ background-color: $blue35; box-shadow: none; }	///	nested sass parent selctor
